--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="left">
-      <img src="https://via.placeholder.com/400x400.png?text=Your+Photo" alt="Rose Ryder" />
+      <img src="rose.jpg" alt="Rose Ryder" />
     </div>
     <div class="right">
       <div class="name">Rose Ryder</div>
